Working on testing of DB and models

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,6 +11,7 @@
 
   <link rel="icon" href="/images/spending-tracker-icon.png" />
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/10up-sanitize.css/8.0.0/sanitize.min.css" />
   <link rel="stylesheet" type="text/css" href="/styles/buttons.css">
   <link rel="stylesheet" type="text/css" href="/styles/elements.css">
   <link rel="stylesheet" type="text/css" href="/styles/flex.css">
