--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,15 +15,17 @@
   <link rel="stylesheet" type="text/css" href="/styles/buttons.css">
   <link rel="stylesheet" type="text/css" href="/styles/elements.css">
   <link rel="stylesheet" type="text/css" href="/styles/flex.css">
-  <link rel="stylesheet" type="text/css" href="/styles/formscss">
+  <link rel="stylesheet" type="text/css" href="/styles/forms.css">
+  <link rel="stylesheet" type="text/css" href="/styles/global.css">
   <link rel="stylesheet" type="text/css" href="/styles/grid.css">
+  <link rel="stylesheet" type="text/css" href="/styles/images.css">
   <link rel="stylesheet" type="text/css" href="/styles/tables.css">
   <link rel="stylesheet" type="text/css" href="/styles/text_fonts_colours.css">
 
 </head>
 <body>
 
-  <header>
+  <header class="fixed-top bg-bold">
     <banner>
       <img src="/images/spending-tracker-logo.png" alt="">
       <h1>Spending Tracker</h1>
@@ -32,29 +34,32 @@
 
     <nav>
       <ul>
-        <li><a href="/spending-tracker/add"></a></li>
-        <li><a href="//spending-tracker/list"></a></li>
-        <li><a href="/spending-tracker/show"></a></li>
-        <li><a href="/spending-tracker/categories"></a></li>
-        <li><a href="/spending-tracker/budget"></a></li>
+        <li><a href="/spending-tracker/transactions">Transactions</a></li>
+        <li><a href="/spending-tracker/categories">Categories</a></li>
+        <li><a href="/spending-tracker/category_groups">Category Groups</a></li>
+        <li><a href="//spending-tracker/time_periods">Time Periods</a></li>
+        <li><a href="/spending-tracker/budgets">Budget</a></li>
       </ul>
     </nav>
   </header>
 
-  <sidebar>
+  <aside class="fixed-left bg-med">
     <ul>
-      <li><a href="/spending-tracker/add"></a></li>
-      <li><a href="//spending-tracker/list"></a></li>
-      <li><a href="/spending-tracker/show"></a></li>
-      <li><a href="/spending-tracker/categories"></a></li>
-      <li><a href="/spending-tracker/budget"></a></li>
+      <li><a href="/spending-tracker/add">Add</a></li>
+      <li><a href="//spending-tracker/list">List</a></li>
+      <li><a href="/spending-tracker/show">Show</a></li>
+      <li><a href="/spending-tracker/categories">Cat</a></li>
+      <li><a href="/spending-tracker/budget">Budget</a></li>
     </ul>
-  </sidebar>
+  </aside>
 
-  <main>
+  <main class="fixed-right">
     <%= yield %>
   </main>
 
+  <footer class="footer">
+    <p>This is the footer!!!!!!!!!!</p>
+  </footer>
 
 </body>
 </html>
