--- a/views/category-groups/edit.erb
+++ b/views/category-groups/edit.erb
@@ -13,7 +13,7 @@ method="post">
 <form
 action="/spending-tracker/category-groups/<%= @category_group.id%>/delete"
 method="post">
-  <input type="submit" value="Save">
+  <input type="submit" value="Delete">
 </form>
 
 <% @category_groups.each { |category_group| %>
