--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -4,7 +4,7 @@
   method="post">
 
     <label for="date">Select Date</label>
-    <input type="date" name="date" value="">
+    <input type="date" name="date" value="<%= @today.to_s %>">
 
     <label for="date_range">Select Date Range</label>
     <select class="" name="date_range">
