--- a/views/categories/new.erb
+++ b/views/categories/new.erb
@@ -7,14 +7,14 @@ method="post">
 
   <label for="category_group_id"> Category Group: </label>
   <select class="" name="category_group_id">
-    <%= @category_groups.each { |category_group| %>
+    <% @category_groups.each { |category_group| %>
       <option
       class=""
       value="<%=category_group.id%>"
       >
       <%= category_group.name %>
       </option>
-    <%= } %>
+    <% } %>
   </select>
 
   <input type="submit" value="Create">
