Work on filtering selections persisting through to filtered transactions screen

--- a/views/transactions/index.erb
+++ b/views/transactions/index.erb
@@ -33,7 +33,7 @@
         type="checkbox"
         name="groups[]"
         value="<%= cat_group.id %>"
-        checked >
+        <%= "checked" unless !(@groups.include?(cat_group.id.to_s)) %> >
         <br>
 
       <% } %>
